2001-10-30  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new): Consider
	existing addresses with a zero refcount valid to return (with an
	added refcount).
	(prune_zeroref_addresses_foreach): Impl.
	(prune_zeroref_addresses_timeout): Impl.
	(soup_address_unref): Don't free zero ref addresses, instead make
	sure zeroref timeout handler is installed and install if not. Also
	move to here from soup-socket.c.

	* src/libsoup/soup-private.h: Add killme flag to soup_address.

	* src/libsoup/soup-socket-win.c (soup_address_unref): Move here
	from soup-socket.c.

2001-10-29  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (authorize_handler): Call
	soup_auth_fn if we don't have auth data in the URI, then call
	soup_auth_initialize if the callback set authenticate data on the
	passed uri.

	* src/libsoup/soup-auth.h: Make type be SoupAuthType.

	* src/libsoup/soup-auth.c (soup_auth_initialize): Impl. To be
	called after SoupAuth creation to apply auth data to the
	SoupAuth. This allows us to parse the Authenticate headers to
	figure out which auth scheme and realm is being used, and pass
	this to the auth callback.

	* src/libsoup/soup-misc.c (soup_set_authorize_callback): Impl.

	* src/libsoup/soup-misc.h: Add SoupAuthType enum here.

	* src/libsoup/soup-server.h: Use SoupAuthType. Remove
	SoupServerAuthType.

2001-10-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav.c: Include soup-error.h

	* src/libsoup/soup-queue.c (soup_debug_print_headers): Use
	soup_message_foreach_header.

	* src/libsoup/soup-message.c (soup_message_new): Default to GET if
	method not supplied.
	(soup_message_add_header): Remove code to delete header if no
	value is supplied.
	(soup_message_foreach_remove_header): Impl.
	(soup_message_remove_header): Impl.

2001-10-26  Alex Graveley  <alex@ximian.com>

        * src/libsoup/soup-socket-unix.c (soup_address_new): Use WUNTRACED,
        which should fix possible hang situation.
